// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
123<!--prettier-ignore-->456

<span></span><!--prettier-ignore--><span></span>

=====================================output=====================================
123<!--prettier-ignore-->456

<span></span
><!--prettier-ignore--><span></span>

================================================================================
`;

exports[`document.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<html class="no-js" lang="en">
  <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
    <title>Title</title>
  </head>
  <body>
    <!-- prettier-ignore -->
    <p>
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <p attribute  =  "value">
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <ul
      ><li> First  </li
      ><li>Second<i>1</i><div><div>String</div></div></li
    ></ul>

    <!-- prettier-ignore -->
    <div>





    </div>

    <!-- prettier-ignore -->
    <ul><!--
      --><li>   First   </li><!--
      --><li>   Second   </li><!--
    --></ul>

    <!-- prettier-ignore -->
    <br />
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html>
<html class="no-js" lang="en">
  <head>
    <meta charset="utf-8" />
    <meta http-equiv="x-ua-compatible" content="ie=edge" />
    <title>Title</title>
  </head>
  <body>
    <!-- prettier-ignore -->
    <p>
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <p attribute  =  "value">
      Test  Test   Test
    </p>

    <!-- prettier-ignore -->
    <ul
      ><li> First  </li
      ><li>Second<i>1</i><div><div>String</div></div></li
    ></ul>

    <!-- prettier-ignore -->
    <div>





    </div>

    <!-- prettier-ignore -->
    <ul><!--
      --><li>   First   </li><!--
      --><li>   Second   </li><!--
    --></ul>

    <!-- prettier-ignore -->
    <br />
  </body>
</html>

================================================================================
`;

exports[`long_lines.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- prettier-ignore -->
A super long string that has been marked as ignore because it was probably generated by some script.

<p>
    Just some ordinary text that should be wrapped up because it is super long and has not been marked as ignore.
</p>

<p>
    <!-- prettier-ignore -->
    A super long string that has been marked as ignore because it was probably generated by some script.
</p>

<!-- prettier-ignore -->
| Dogs | Cats | Weasels | Bats | Pigs | Mice | Hedgehogs | Capybaras | Rats | Tigers |
| ---- | ---- | ------- | ---- | ---- | ---- | --------- | --------- | ---- | ------ |
|    1 |    1 |       0 |    0 |    1 |    1 |         5 |        16 |    4 |      0 |
=====================================output=====================================
<!-- prettier-ignore -->
A super long string that has been marked as ignore because it was probably generated by some script.

<p>
  Just some ordinary text that should be wrapped up because it is super long and
  has not been marked as ignore.
</p>

<p>
  <!-- prettier-ignore -->
  A super long string that has been marked as ignore because it was probably generated by some script.
</p>

<!-- prettier-ignore -->
| Dogs | Cats | Weasels | Bats | Pigs | Mice | Hedgehogs | Capybaras | Rats | Tigers |
| ---- | ---- | ------- | ---- | ---- | ---- | --------- | --------- | ---- | ------ |
|    1 |    1 |       0 |    0 |    1 |    1 |         5 |        16 |    4 |      0 |

================================================================================
`;
